[workspace]
members = [
  # core crates for weekend-rs authentication and authorization
  "weekend",

  # authentication handler
  "handler",

  # iam crates 
  "iam",

  # adapter crates - these are set of libraries that allow weekend-rs to work with external resources or framework's
  "adapters",
  "adapters/actix",
  "adapters/axum",
  "adapters/mysql",
  "adapters/postgres",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.87"
async-trait = "0.1.83"
serde = "1.0.215"
plus-rs = { git = "https://github.com/ws-gith/plus.git", rev = "462ad8feabc57a4cfeded89c7544ee8b4eaee858" }
