[package]
name = "adapters"
# TODO -> Add documentation url later
# documentation = ""
description = "Extend the weekend functionality which allow weekend to work with other third party service"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]

[lints]
workspace = true
