[package]
name = "handler"
# TODO -> Add documentation url later
# documentation = ""
description = "Authentication handler"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


[features]
default = ["bearer"]
jwt = []
oauth = []
cookie = []
bearer = []

# dependencies features


[dependencies]
plus-rs = { workspace = true, features = ["std-rs", "axum"] }
serde = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }


[lints]
workspace = true
