[package]
name = "iam"
# TODO -> Add documentation url later
# documentation = ""
description = "Identity System that support user and role management and authorization"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]


[lints]
workspace = true
